tests/baselines/reference/ES5For-of12.errors.txt
ES5For-of12.ts(1,7): error TS2364: The left-hand side of an assignment expression must be a variable or a property access.


==== ES5For-of12.ts (1 errors) ====
    for ([""] of [[""]]) { }
          ~~
!!! error TS2364: The left-hand side of an assignment expression must be a variable or a property access.